# video-analytics

./: .gitignore  Dockerfile  README.md  detector.py  display.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamer.py
entities/: __init__.py  detector.py  display.py  streamer.py
utils/: logger.py  menu.py
