[project]
name = "video-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "numpy",
    "ruff",
    "confluent-kafka>=2.8.2",
    "flask>=3.1.0",
    "kafka-python>=2.0.5",
]


[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

ignore = [
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
